changed title to uppercase cool

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="gradient">
-    <h1>Cool Generator</h1>
+    <h1>COOL Generator</h1>
     <!-- oninput="setGradient()" can also be used -->
     <input id="color1" type="color" name="color1" value="#ff0000">
     <input id="color2" type="color" name="color2" value="#00ff00">
