--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <input id="color2" type="color" name="color2" value="#00ff00">
     <input id="color3" type="color" name="color3" value="#0000ff"> <br>
     <button id="random">Random</button>
-    <h2>Current CSS Background</h2>
+    <h2>This is the current background</h2>
     <h3 id="currentB">background: linear-gradient(to right, red, green,blue);</h3>
     <button id="copy">Copy</button>
 </body>
