--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
     <h3 id="currentB">background: linear-gradient(to right, red, green,blue);</h3>
     <button id="copy">Copy</button>
 </body>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="bundle.js"></script>
 </html>
